--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,10 +1,10 @@
-deploy.ant.properties.file=C:\\Users\\Kittisak\\AppData\\Roaming\\NetBeans\\8.2\\config\\GlassFishEE6\\Properties\\gfv31834799157.properties
+deploy.ant.properties.file=C:\\Users\\PNattawut\\AppData\\Roaming\\NetBeans\\8.2\\config\\GlassFishEE6\\Properties\\gfv32114007735.properties
 j2ee.platform.is.jsr109=true
-j2ee.server.domain=C:/Users/Kittisak/AppData/Roaming/NetBeans/8.2/config/GF_4.1.1/domain1
-j2ee.server.home=C:/Program Files/glassfish-4.1.1/glassfish
-j2ee.server.instance=[C:\\Program Files\\glassfish-4.1.1\\glassfish;C:\\Program Files\\glassfish-4.1.1\\glassfish\\domains\\domain1]deployer:gfv3ee6wc:localhost:4848
-j2ee.server.middleware=C:/Program Files/glassfish-4.1.1
+j2ee.server.domain=C:/Users/PNattawut/GlassFish_Server/glassfish/domains/domain1
+j2ee.server.home=C:/Users/PNattawut/GlassFish_Server/glassfish
+j2ee.server.instance=[C:\\Users\\PNattawut\\GlassFish_Server\\glassfish;C:\\Users\\PNattawut\\GlassFish_Server\\glassfish\\domains\\domain1]deployer:gfv3ee6wc:localhost:4848
+j2ee.server.middleware=C:/Users/PNattawut/GlassFish_Server
 javac.debug=true
 javadoc.preview=true
 selected.browser=Chrome.INTEGRATED
-user.properties.file=/Users/maypt/Library/Application Support/NetBeans/8.2/build.properties
+user.properties.file=C:\\Users\\PNattawut\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
