add java EE GlassFish

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -136,7 +136,8 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
-    ${libs.MySQLDriver.classpath}
+    ${libs.MySQLDriver.classpath}:\
+    ${libs.Java-EE-GlassFish-v3-Prelude.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
