--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -12,6 +12,10 @@
         <servlet-name>LoginServlet</servlet-name>
         <servlet-class>com.junior.jat.servlet.LoginServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>Admin_AddUserServlet</servlet-name>
+        <servlet-class>com.junior.jat.servlet.Admin_AddUserServlet</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>GetTaskServlet</servlet-name>
         <url-pattern>/GetTaskServlet</url-pattern>
@@ -23,6 +27,10 @@
     <servlet-mapping>
         <servlet-name>LoginServlet</servlet-name>
         <url-pattern>/Login</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>Admin_AddUserServlet</servlet-name>
+        <url-pattern>/Admin_AddUser</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
