--- a/build.xml
+++ b/build.xml
@@ -7,8 +7,8 @@
 <!-- the Compile on Save feature is turned off for the project. -->
 <!-- You can turn off the Compile on Save (or Deploy on Save) setting -->
 <!-- in the project's Project Properties dialog box.-->
-<project name="JustAssignTask" default="default" basedir=".">
-    <description>Builds, tests, and runs the project JustAssignTask.</description>
+<project name="Just-Assign-Task" default="default" basedir=".">
+    <description>Builds, tests, and runs the project Just-Assign-Task.</description>
     <import file="nbproject/build-impl.xml"/>
     <!--
 
