--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -53,4 +53,7 @@
             30
         </session-timeout>
     </session-config>
+    <welcome-file-list>
+        <welcome-file>login.jsp</welcome-file>
+    </welcome-file-list>
 </web-app>
