แอดมิน:สร้างรายวิชา

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -24,6 +24,10 @@
         <servlet-name>Admin_EditUserServlet</servlet-name>
         <servlet-class>com.junior.jat.servlet.Admin_EditUserServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>Admin_CreateSubjectServlet</servlet-name>
+        <servlet-class>com.junior.jat.servlet.Admin_CreateSubjectServlet</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>GetTaskServlet</servlet-name>
         <url-pattern>/GetTaskServlet</url-pattern>
@@ -47,6 +51,10 @@
     <servlet-mapping>
         <servlet-name>Admin_EditUserServlet</servlet-name>
         <url-pattern>/Admin_EditUserServlet</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>Admin_CreateSubjectServlet</servlet-name>
+        <url-pattern>/Admin_CreateSubjectServlet</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
