อาจารย์ สามารถ แก้ไขงาน ที่มีอยู่ในระบบได้

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -40,6 +40,10 @@
         <servlet-name>Admin_DeleteSubjectServlet</servlet-name>
         <servlet-class>com.junior.jat.servlet.Admin_DeleteSubjectServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>Teacher_EditTaskServlet</servlet-name>
+        <servlet-class>com.junior.jat.servlet.Teacher_EditTaskServlet</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>GetTaskServlet</servlet-name>
         <url-pattern>/GetTaskServlet</url-pattern>
@@ -79,6 +83,10 @@
     <servlet-mapping>
         <servlet-name>Admin_DeleteSubjectServlet</servlet-name>
         <url-pattern>/Admin_DeleteSubjectServlet</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>Teacher_EditTaskServlet</servlet-name>
+        <url-pattern>/Teacher_EditTaskServlet</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
