--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -52,6 +52,14 @@
         <servlet-name>Admin_GetTeacherServlet</servlet-name>
         <servlet-class>com.junior.jat.servlet.Admin_GetTeacherServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>GetNearestSrevlet</servlet-name>
+        <servlet-class>com.junior.jat.servlet.GetNearestSrevlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>GetLatestServlet</servlet-name>
+        <servlet-class>com.junior.jat.servlet.GetLatestServlet</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>GetTaskServlet</servlet-name>
         <url-pattern>/GetTaskServlet</url-pattern>
@@ -103,6 +111,14 @@
     <servlet-mapping>
         <servlet-name>Admin_GetTeacherServlet</servlet-name>
         <url-pattern>/Admin_GetTeacherServlet</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>GetNearestSrevlet</servlet-name>
+        <url-pattern>/GetNearestSrevlet</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>GetLatestServlet</servlet-name>
+        <url-pattern>/GetLatestServlet</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
