--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -53,12 +53,20 @@
         <servlet-class>com.junior.jat.servlet.Admin_GetTeacherServlet</servlet-class>
     </servlet>
     <servlet>
-        <servlet-name>GetNearestSrevlet</servlet-name>
-        <servlet-class>com.junior.jat.servlet.GetNearestSrevlet</servlet-class>
+        <servlet-name>Admin_GetSubjectServlet</servlet-name>
+        <servlet-class>com.junior.jat.servlet.Admin_GetSubjectServlet</servlet-class>
     </servlet>
     <servlet>
-        <servlet-name>GetLatestServlet</servlet-name>
-        <servlet-class>com.junior.jat.servlet.GetLatestServlet</servlet-class>
+        <servlet-name>Admin_DeleteStudentServlet</servlet-name>
+        <servlet-class>com.junior.jat.servlet.Admin_DeleteStudentServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>Admin_DeleteTeacherServlet</servlet-name>
+        <servlet-class>com.junior.jat.servlet.Admin_DeleteTeacherServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>Admin_EditStudentServlet</servlet-name>
+        <servlet-class>com.junior.jat.servlet.Admin_EditStudentServlet</servlet-class>
     </servlet>
     <servlet-mapping>
         <servlet-name>GetTaskServlet</servlet-name>
@@ -113,12 +121,6 @@
         <url-pattern>/Admin_GetTeacherServlet</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
-        <servlet-name>GetNearestSrevlet</servlet-name>
-        <url-pattern>/GetNearestSrevlet</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
-        <servlet-name>GetLatestServlet</servlet-name>
-        <url-pattern>/GetLatestServlet</url-pattern>
         <servlet-name>Admin_GetSubjectServlet</servlet-name>
         <url-pattern>/Admin_GetSubjectServlet</url-pattern>
     </servlet-mapping>
