แอดมิน : ผูกวิชา

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -92,6 +92,14 @@
         <servlet-name>SearchTaskServlet</servlet-name>
         <servlet-class>com.junior.jat.servlet.SearchTaskServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>Admin_LoginServlet</servlet-name>
+        <servlet-class>com.junior.jat.servlet.Admin_LoginServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>Admin_RedirectServlet</servlet-name>
+        <servlet-class>com.junior.jat.servlet.Admin_RedirectServlet</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>GetTaskServlet</servlet-name>
         <url-pattern>/GetTaskServlet</url-pattern>
@@ -183,6 +191,14 @@
     <servlet-mapping>
         <servlet-name>SearchTaskServlet</servlet-name>
         <url-pattern>/SearchTaskServlet</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>Admin_LoginServlet</servlet-name>
+        <url-pattern>/Admin_LoginServlet</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>Admin_RedirectServlet</servlet-name>
+        <url-pattern>/Admin_RedirectServlet</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
