--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -205,7 +205,6 @@
         <url-pattern>/SearchTaskServlet</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
-<<<<<<< HEAD
         <servlet-name>AllTaskServlet</servlet-name>
         <url-pattern>/AllTaskServlet</url-pattern>
     </servlet-mapping>
@@ -216,14 +215,14 @@
     <servlet-mapping>
         <servlet-name>SubSubjectRedirectServlet</servlet-name>
         <url-pattern>/SubSubjectRedirectServlet</url-pattern>
-=======
+    </servlet-mapping>
+    <servlet-mapping>
         <servlet-name>Admin_LoginServlet</servlet-name>
         <url-pattern>/Admin_LoginServlet</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
         <servlet-name>Admin_RedirectServlet</servlet-name>
         <url-pattern>/Admin_RedirectServlet</url-pattern>
->>>>>>> 4e4089cc4a61f03cb752fb1f70942d38ab975287
     </servlet-mapping>
     <session-config>
         <session-timeout>
